Fix scrollbar

--- a/src/renderer/css/main.css
+++ b/src/renderer/css/main.css
@@ -7,7 +7,22 @@
   * {
     @apply font-roboto;
     @apply font-thin;
+    @apply outline-none;
   }
+  *::-webkit-scrollbar-track {
+    @apply bg-zinc-50/50;
+  }
+
+  *::-webkit-scrollbar {
+    @apply w-1;
+    @apply h-2;
+    @apply bg-zinc-50/50;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    @apply bg-zinc-950/70;
+  }
+
   img,
   video {
     max-width: unset;
